--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest-xdist = "^3.0.0"
 pytest-black = "^0.3.12"
 pytest-mypy = "^0.10.0"
 boto3 = "^1.26.0"
+urllib3 = "1.26.6"
 boto3-type-annotations = "^0.3.1"
 iso8601 = "^1.0.0"
 xmltodict = "^0.13.0"
