--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Functions for Load Control"
 authors = []
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 aws-lambda-powertools = {extras = ["all"], version = "^2.14.0"}
 ratelimiter = "^1.2.0"
 
@@ -24,6 +24,7 @@ urllib3 = "1.26.6"
 boto3-type-annotations = "^0.3.1"
 iso8601 = "^1.0.0"
 xmltodict = "^0.13.0"
+pandas = "2.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
