--- a/serverless-dev.yml
+++ b/serverless-dev.yml
@@ -7,3 +7,8 @@ override_throttling_config:
   lambda_rate_limit_config:
     calls_limit: 1000
     period_sec: 60
+override_subgrp_config:
+  queue_config:
+    batch_window: 10
+    batch_size: 500
+    max_concurrency: 2
