--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,13 @@ provider:
   name: aws
   runtime: python3.9
   region: ap-south-1
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - states:*
+        - dynamodb:*
+        - sqs:*
+      Resource: "*"
   layers:
     - Ref: PythonRequirementsLambdaLayer
     - arn:aws:lambda:ap-south-1:336392948345:layer:AWSSDKPandas-Python39:12
@@ -156,7 +163,6 @@ stepFunctions:
       id: DLCCancelOverrideStateMachine
       name: poc-cancel-override-processors-sm
       definition: ${file(src/resources/sm/dlc-cancel-override-sm.json)}
-
 
 plugins:
   - serverless-python-requirements
