--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "msi-load-control-functions",
+  "description": "",
+  "version": "1.1.0",
   "devDependencies": {
+    "serverless": "^3.35.2",
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-prune-plugin": "^2.0.2",
     "serverless-python-requirements": "^6.0.1",
