--- a/serverless.yml
+++ b/serverless.yml
@@ -49,6 +49,12 @@ provider:
     - Ref: PythonRequirementsLambdaLayer
   tracing:
     lambda: ${self:custom.XRAY_TRACING_ENABLED}
+  environment:
+    LOG_LEVEL: INFO
+    REGION: ${self:provider.region}
+    SUPPORT_REPORTING_ENABLED: true
+    AWS_ACCOUNT_ID: ${aws:accountId}
+    SUPPORT_SNS_ARN: ${self:custom.SUPPORT_SNS_ARN}
     
 
 package:
@@ -66,6 +72,7 @@ functions:
     description: "State machine handler for dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 600 # optional, in seconds, default is 6
+    # role: LoadControlOperationsRole
     environment:
       REQUEST_TRACKER_TABLE_NAME: ${self:custom.REQUEST_TRACKER_TABLE_NAME}
       DEFAULT_OVERRIDE_DURATION_MINUTES: 30
@@ -77,6 +84,7 @@ functions:
     description: "API gateway handler for dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
+    # role: LoadControlOverrideApiGwRole
     events:
       - http:
           path: /service/lc/load/{subscription_id+}
@@ -92,6 +100,7 @@ functions:
     description: "Throttling enforcer for dlc override requests."
     memorySize: 2048
     timeout: 180  # 3 minutes
+    # role: DlcOverrideThrottleRole
     events:
       - sqs:
           arn: arn:aws:sqs:ap-south-1:752671163579:load-control-throttle-queue
@@ -113,6 +122,7 @@ functions:
     description: "API gateway handler for dlc get status requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
+    # role: LoadControlGetRequestStatusRole
     events:
       - http:
           path: /service/lc/status/{correlation_id+}
@@ -126,6 +136,7 @@ functions:
     description: "API gateway handler for cancel dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
+    # role: LoadControlCancelRequestRole
     events:
       - http:
           path: /service/lc/cancel/{sub_id}
@@ -151,6 +162,7 @@ functions:
     description: "State machine handler for cancelling dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
+    # role: LoadControlCancelRequestRole
     environment:
       DLC_OVERRIDE_SM_EXECUTION_ARN: !Sub arn:aws:states:${AWS::Region}:${AWS::AccountId}:execution:poc-processors-sm
       REQUEST_TRACKER_TABLE_NAME: ${self:custom.REQUEST_TRACKER_TABLE_NAME}
@@ -166,8 +178,18 @@ stepFunctions:
       name: poc-cancel-override-processors-sm
       definition: ${file(src/resources/sm/dlc-cancel-override-sm.json)}
 
+# resources:
+#   - ${file(src/resources/cloudformation/roles/load_control_operations_role.yml)}
+#   - ${file(src/resources/cloudformation/roles/load_control_cancel_request_role.yml)}
+#   - ${file(src/resources/cloudformation/roles/load_control_override_apigw_role.yml)}
+#   - ${file(src/resources/cloudformation/roles/load_control_get_request_status_role.yml)}
+#   - ${file(src/resources/cloudformation/roles/load_control_override_throttle_role.yml)}
+  # - ${file(src/resources/cloudformation/sqs/load_control_override_throttle_queue.yml)}
+
+
 plugins:
   - serverless-python-requirements
   - serverless-plugin-common-excludes
   - serverless-step-functions
   - serverless-prune-plugin
+  # - serverless-iam-roles-per-function
