--- a/src/resources/cloudformation/roles/load_control_cancel_request_role.yml
+++ b/src/resources/cloudformation/roles/load_control_cancel_request_role.yml
@@ -28,44 +28,35 @@ Resources:
                 Effect: Allow
                 Action:
                   - states:StopExecution
-                Resource: !Sub arn:aws:states:${AWS::Region}:${AWS::AccountId}:execution:msi-${self:provider.stage}-dlc-override-processors-sm:*
+                Resource: !Sub arn:aws:states:${AWS::Region}:${AWS::AccountId}:execution:poc-processors-sm:*
               - Sid: "RequestTrackerDDBWriteAccess"
                 Effect: Allow
                 Action:
                   - dynamodb:GetItem
                   - dynamodb:PutItem
                   - dynamodb:UpdateItem
-                Resource: ${self:custom.REQUEST_TRACKER_TABLE_ARN}
-              - Sid: "PnetSessionDDBAccess"
-                Effect: Allow
-                Action:
-                  - dynamodb:Query
-                  - dynamodb:PutItem
-                  - dynamodb:DeleteItem
-                Resource: ${self:custom.PNET_SESSION_TABLE_ARN}
+                Resource: arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}
+              # - Sid: "PnetSessionDDBAccess"
+              #   Effect: Allow
+              #   Action:
+              #     - dynamodb:Query
+              #     - dynamodb:PutItem
+              #     - dynamodb:DeleteItem
+              #   Resource: ${self:custom.PNET_SESSION_TABLE_ARN}
               - Sid: "DDBReadOnlyAccess"
                 Effect: Allow
                 Action:
                   - dynamodb:Query
                 Resource:
                   - !Sub '${self:custom.SUBSCRIPTION_TABLE_ARN}/index/subId-index'
-                  - !Sub '${self:custom.REQUEST_TRACKER_TABLE_ARN}/index/GSI3'
-              - Sid: "PnetSecretAccess"
-                Effect: Allow
-                Action:
-                  - secretsmanager:GetResourcePolicy
-                  - secretsmanager:GetSecretValue
-                  - secretsmanager:DescribeSecret
-                  - secretsmanager:ListSecretVersionIds
-                Resource:
-                  - ${self:custom.PNET_SECRET_ARN_PATTERN}
+                  - !Sub 'arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}/index/GSI3'
               - Sid: "CancelOverrideSMAccess"
                 Effect: Allow
                 Action:
                   - states:StartExecution
                 Resource: !Ref DLCCancelOverrideStateMachine
-              - Sid: "SubscriptionKdsWriteOnly"
-                Effect: Allow
-                Action:
-                  - kinesis:PutRecord
-                Resource: ${self:custom.KINESIS_DATA_STREAM_ARN}
+              # - Sid: "SubscriptionKdsWriteOnly"
+              #   Effect: Allow
+              #   Action:
+              #     - kinesis:PutRecord
+              #   Resource: ${self:custom.KINESIS_DATA_STREAM_ARN}
