--- a/src/resources/cloudformation/roles/load_control_operations_role.yml
+++ b/src/resources/cloudformation/roles/load_control_operations_role.yml
@@ -24,22 +24,6 @@ Resources:
                   - sns:Publish
                 Resource:
                   - ${self:custom.SUPPORT_SNS_ARN}
-              - Sid: "PnetSecretAccess"
-                Effect: Allow
-                Action:
-                  - secretsmanager:GetResourcePolicy
-                  - secretsmanager:GetSecretValue
-                  - secretsmanager:DescribeSecret
-                  - secretsmanager:ListSecretVersionIds
-                Resource:
-                  - ${self:custom.PNET_SECRET_ARN_PATTERN}
-              - Sid: "PnetSessionDDBAccess"
-                Effect: Allow
-                Action:
-                  - dynamodb:Query
-                  - dynamodb:PutItem
-                  - dynamodb:DeleteItem
-                Resource: ${self:custom.PNET_SESSION_TABLE_ARN}
               - Sid: "RequestTrackerDDBAccess"
                 Effect: Allow
                 Action:
@@ -48,10 +32,10 @@ Resources:
                   - dynamodb:PutItem
                   - dynamodb:UpdateItem
                 Resource:
-                  - ${self:custom.REQUEST_TRACKER_TABLE_ARN}
-                  - !Sub '${self:custom.REQUEST_TRACKER_TABLE_ARN}/index/GSI3'
-              - Sid: "SubscriptionKdsWriteOnly"
-                Effect: Allow
-                Action:
-                  - kinesis:PutRecord
-                Resource: ${self:custom.KINESIS_DATA_STREAM_ARN}
+                  - arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}
+                  - !Sub 'arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}/index/GSI3'
+              # - Sid: "SubscriptionKdsWriteOnly"
+              #   Effect: Allow
+              #   Action:
+              #     - kinesis:PutRecord
+              #   Resource: ${self:custom.KINESIS_DATA_STREAM_ARN}
