--- a/serverless.yml
+++ b/serverless.yml
@@ -38,13 +38,6 @@ provider:
   name: aws
   runtime: python3.8
   region: ap-south-1
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - states:*
-        - dynamodb:*
-        - sqs:*
-      Resource: "*"
   layers:
     - Ref: PythonRequirementsLambdaLayer
   tracing:
@@ -72,7 +65,7 @@ functions:
     description: "State machine handler for dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 600 # optional, in seconds, default is 6
-    # role: LoadControlOperationsRole
+    role: LoadControlOperationsRole
     environment:
       REQUEST_TRACKER_TABLE_NAME: ${self:custom.REQUEST_TRACKER_TABLE_NAME}
       DEFAULT_OVERRIDE_DURATION_MINUTES: 30
@@ -84,7 +77,7 @@ functions:
     description: "API gateway handler for dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
-    # role: LoadControlOverrideApiGwRole
+    role: LoadControlOverrideApiGwRole
     events:
       - http:
           path: /service/lc/load/{subscription_id+}
@@ -100,7 +93,7 @@ functions:
     description: "Throttling enforcer for dlc override requests."
     memorySize: 2048
     timeout: 180  # 3 minutes
-    # role: DlcOverrideThrottleRole
+    role: DlcOverrideThrottleRole
     events:
       - sqs:
           arn: arn:aws:sqs:ap-south-1:752671163579:load-control-throttle-queue
@@ -122,7 +115,7 @@ functions:
     description: "API gateway handler for dlc get status requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
-    # role: LoadControlGetRequestStatusRole
+    role: LoadControlGetRequestStatusRole
     events:
       - http:
           path: /service/lc/status/{correlation_id+}
@@ -136,16 +129,16 @@ functions:
     description: "API gateway handler for cancel dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
-    # role: LoadControlCancelRequestRole
+    role: LoadControlCancelRequestRole
     events:
       - http:
-          path: /service/lc/cancel/{sub_id}
+          path: /service/lc/cancel/{subscription_id}
           method: delete
           integration: lambda-proxy
           request:
             parameters:
               paths:
-                sub_id: true
+                subscription_id: true
               querystrings:
                 correlation_id: true
                 subscriber: true
@@ -162,7 +155,7 @@ functions:
     description: "State machine handler for cancelling dlc override requests."
     memorySize: 1024 # optional, in MB, default is 1024
     timeout: 25 # optional, in seconds, default is 6
-    # role: LoadControlCancelRequestRole
+    role: LoadControlCancelRequestRole
     environment:
       DLC_OVERRIDE_SM_EXECUTION_ARN: !Sub arn:aws:states:${AWS::Region}:${AWS::AccountId}:execution:poc-processors-sm
       REQUEST_TRACKER_TABLE_NAME: ${self:custom.REQUEST_TRACKER_TABLE_NAME}
@@ -178,12 +171,12 @@ stepFunctions:
       name: poc-cancel-override-processors-sm
       definition: ${file(src/resources/sm/dlc-cancel-override-sm.json)}
 
-# resources:
-#   - ${file(src/resources/cloudformation/roles/load_control_operations_role.yml)}
-#   - ${file(src/resources/cloudformation/roles/load_control_cancel_request_role.yml)}
-#   - ${file(src/resources/cloudformation/roles/load_control_override_apigw_role.yml)}
-#   - ${file(src/resources/cloudformation/roles/load_control_get_request_status_role.yml)}
-#   - ${file(src/resources/cloudformation/roles/load_control_override_throttle_role.yml)}
+resources:
+  - ${file(src/resources/cloudformation/roles/load_control_operations_role.yml)}
+  - ${file(src/resources/cloudformation/roles/load_control_cancel_request_role.yml)}
+  - ${file(src/resources/cloudformation/roles/load_control_override_apigw_role.yml)}
+  - ${file(src/resources/cloudformation/roles/load_control_get_request_status_role.yml)}
+  - ${file(src/resources/cloudformation/roles/load_control_override_throttle_role.yml)}
   # - ${file(src/resources/cloudformation/sqs/load_control_override_throttle_queue.yml)}
 
 
@@ -192,4 +185,4 @@ plugins:
   - serverless-plugin-common-excludes
   - serverless-step-functions
   - serverless-prune-plugin
-  # - serverless-iam-roles-per-function
+  - serverless-iam-roles-per-function
