--- a/src/resources/cloudformation/roles/load_control_operations_role.yml
+++ b/src/resources/cloudformation/roles/load_control_operations_role.yml
@@ -31,6 +31,7 @@ Resources:
                   - dynamodb:GetItem
                   - dynamodb:PutItem
                   - dynamodb:UpdateItem
+                  - dynamodb:Scan
                 Resource:
                   - arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}
                   - !Sub 'arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}/index/GSI3'
