--- a/src/resources/cloudformation/roles/load_control_override_throttle_role.yml
+++ b/src/resources/cloudformation/roles/load_control_override_throttle_role.yml
@@ -39,6 +39,7 @@ Resources:
                   - dynamodb:PutItem
                   - dynamodb:UpdateItem
                   - dynamodb:Scan
+                  - dynamodb:BatchWriteItem
                 Resource: arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}
               - Sid: "OverrideSMAccess"
                 Effect: Allow
