--- a/src/resources/cloudformation/roles/load_control_cancel_request_role.yml
+++ b/src/resources/cloudformation/roles/load_control_cancel_request_role.yml
@@ -37,6 +37,7 @@ Resources:
                   - dynamodb:UpdateItem
                   - dynamodb:Scan
                   - dynamodb:BatchWriteItem
+                  - dynamodb:BatchGetItem 
                 Resource: arn:aws:dynamodb:ap-south-1:752671163579:table/${self:custom.REQUEST_TRACKER_TABLE_NAME}
               # - Sid: "PnetSessionDDBAccess"
               #   Effect: Allow
